--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<mainClass>io.github.gotonode.milkshakes-app.app.Main</mainClass>
 	</properties>
 	<dependencies>
 		<dependency>
